# US-Weather

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
examples/: main.py
mynyt/: MyWeather.py
myweather/: MyWeather.py  __init__.py
