[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'myweather'

version = '1.0.0'

description = 'a library that brings global weather to you'

authors = [{name = 'Kevin Zhu'}, {email = 'kzhu2099@gmail.com'}]
maintainers = [{name = 'Kevin Zhu'}, {email = 'kzhu2099@gmail.com'}]

classifiers = [
    'Development Status :: 3 - Alpha',

    'Intended Audience :: Developers',
    'Intended Audience :: End Users/Desktop',

    'License :: OSI Approved :: MIT License',

    'Natural Language :: English',

    'Operating System :: OS Independent',

    'Programming Language :: Python :: 3',
]

readme = 'README.md'

license = {file = 'LICENSE'}

requires-python = '>= 3.9'

dependencies = [
    'requests',
]

[project.urls]
Homepage = 'https://github.com/kzhu2099/My-Weather'
Issues = 'https://github.com/kzhu2099/My-Weather/issues'

[tool.setuptools]
packages = ['myweather']
license-files = []